--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_c78be965ed17276"
   },
   "dependencies": {
     "vue": "^3.3.4",
@@ -26,6 +27,7 @@
     "@storybook/vue3-vite": "^7.4.5",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "chromatic": "^7.2.0",
     "eslint": "^8.49.0",
     "eslint-plugin-storybook": "^0.6.14",
     "eslint-plugin-vue": "^9.17.0",
@@ -36,5 +38,7 @@
     "sass-loader": "^13.3.2",
     "storybook": "^7.4.5",
     "vite": "^4.4.9"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "-@0.0.0"
 }
